# our-world-in-data

./: README.md  dev.py  main.py  pyproject.toml
.state/local/: covid_data.json
assets/covid_data/: covid_data.py
data/our-world-in-data/covid_19_cases_deaths/: local-133.parquet
data/our-world-in-data/snapshots/: local-133.json  local-135.json
