[project]
name = "our-world-in-data"
version = "0.1.0"
description = "Our World in Data Connector"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyarrow>=17.0.0",
    "tenacity>=8.5.0",
    "boto3>=1.35.0",
    "ratelimit>=2.2.1",
    "duckdb>=1.1.0",
    "requests>=2.32.0",
    "pyiceberg>=0.8.0",
    "pandas>=2.2.0",
]